Improve portfolio styling

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio | Matheus Muniz</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+  <meta name="description" content="Portfólio profissional de Matheus Muniz, desenvolvedor especializado em C#, ASP.NET e MySQL">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="css/portfolio.css">
 </head>
 <body>
@@ -19,7 +21,7 @@
   <main>
     <section id="sobre" class="fade-section">
       <h2>Sobre Mim</h2>
-      <p>Sou desenvolvedor focado em tecnologias Microsoft, trabalhando com C#, ASP.NET e MySQL. Tenho experiência em criar APIs REST, testar com Postman e colaborar utilizando Git. Sou comunicativo e gosto de trabalhar em equipe.</p>
+      <p>Sou desenvolvedor focado em tecnologias Microsoft, trabalhando com <strong>C#</strong>, <strong>ASP.NET</strong> e <strong>MySQL</strong>. Tenho experiência em criar APIs REST, testar com Postman e colaborar utilizando Git. Sou comunicativo e gosto de trabalhar em equipe.</p>
     </section>
     <section id="projetos" class="fade-section">
       <h2>Projetos em Destaque</h2>
@@ -28,19 +30,19 @@
           <h3>Locador</h3>
           <p>Sistema de locação de veículos com gerenciamento de contratos.</p>
           <p class="tech">C#, ASP.NET, MySQL</p>
-          <a href="https://github.com/MMUNIZ33/locador" target="_blank">Ver repositório</a>
+          <a href="https://github.com/MMUNIZ33/locador" target="_blank" class="btn">Ver repositório</a>
         </div>
         <div class="project">
           <h3>Gerenciador de Tarefas</h3>
           <p>Aplicação web para controle de tarefas e produtividade.</p>
           <p class="tech">C#, ASP.NET MVC</p>
-          <a href="https://github.com/MMUNIZ33/task-manager" target="_blank">Ver repositório</a>
+          <a href="https://github.com/MMUNIZ33/task-manager" target="_blank" class="btn">Ver repositório</a>
         </div>
         <div class="project">
           <h3>API Catálogo de Livros</h3>
           <p>API REST para cadastro e consulta de livros.</p>
           <p class="tech">C#, .NET, Entity Framework</p>
-          <a href="https://github.com/MMUNIZ33/book-api" target="_blank">Ver repositório</a>
+          <a href="https://github.com/MMUNIZ33/book-api" target="_blank" class="btn">Ver repositório</a>
         </div>
       </div>
     </section>
@@ -60,8 +62,8 @@
       <p>Email: <a href="mailto:matthews.muniz33@gmail.com">matthews.muniz33@gmail.com</a></p>
       <p>Telefone: <a href="tel:+5511999999999">(11) 99999-9999</a></p>
       <ul class="social">
-        <li><a href="https://github.com/MMUNIZ33" target="_blank"><i class="devicon-github-original"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/matheus-muniz/" target="_blank"><i class="devicon-linkedin-plain"></i></a></li>
+        <li><a href="https://github.com/MMUNIZ33" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/matheus-muniz/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
       </ul>
     </section>
   </main>
