Atualizar portfólio com informações profissionais

--- a/index.html
+++ b/index.html
@@ -15,34 +15,21 @@
     <div class="hero-content fade-section">
       <img src="img/80501285.jpg" alt="Foto de Matheus" class="profile">
       <h1>Matheus Muniz</h1>
-      <p class="intro">Desenvolvedor C# e ASP.NET</p>
+      <p class="intro">Desenvolvedor .NET</p>
+      <p class="intro-small">Sempre buscando aprender e colaborar em projetos utilizando meus conhecimentos em .NET.</p>
     </div>
   </header>
   <main>
     <section id="sobre" class="fade-section">
       <h2>Sobre Mim</h2>
-      <p>Sou desenvolvedor focado em tecnologias Microsoft, trabalhando com <strong>C#</strong>, <strong>ASP.NET</strong> e <strong>MySQL</strong>. Tenho experiência em criar APIs REST, testar com Postman e colaborar utilizando Git. Sou comunicativo e gosto de trabalhar em equipe.</p>
-    </section>
+      <p>Atuo desde 2021 como Desenvolvedor .NET na empresa Blomaq Locação de Equipamentos e Imóveis LTDA. Trabalho com C#, .NET Framework e Core, DevExpress e SQL Server, realizando integrações com APIs como Zapsign e serviços bancários. Domino SOLID, AWS, RabbitMQ, e possuo conhecimentos em HTML, Bootstrap e Blazor (básico). Gosto de trabalhar em equipe, mentorando colegas e resolvendo problemas técnicos de forma prática.</p>
     <section id="projetos" class="fade-section">
       <h2>Projetos em Destaque</h2>
       <div class="project-list">
         <div class="project">
-          <h3>Locador</h3>
-          <p>Sistema de locação de veículos com gerenciamento de contratos.</p>
-          <p class="tech">C#, ASP.NET, MySQL</p>
-          <a href="https://github.com/MMUNIZ33/locador" target="_blank" class="btn">Ver repositório</a>
-        </div>
-        <div class="project">
-          <h3>Gerenciador de Tarefas</h3>
-          <p>Aplicação web para controle de tarefas e produtividade.</p>
-          <p class="tech">C#, ASP.NET MVC</p>
-          <a href="https://github.com/MMUNIZ33/task-manager" target="_blank" class="btn">Ver repositório</a>
-        </div>
-        <div class="project">
-          <h3>API Catálogo de Livros</h3>
-          <p>API REST para cadastro e consulta de livros.</p>
-          <p class="tech">C#, .NET, Entity Framework</p>
-          <a href="https://github.com/MMUNIZ33/book-api" target="_blank" class="btn">Ver repositório</a>
+          <h3>Sistema de Gestão Blomaq</h3>
+          <p>Atuei no desenvolvimento e manutenção de um sistema legado com mais de 10 anos de evolução, utilizando .NET e SQL Server. Modernizei interfaces com DevExpress e implementei integrações com APIs bancárias e com a API Zapsign.</p>
+          <p class="tech">C#, .NET, SQL Server, DevExpress</p>
         </div>
       </div>
     </section>
@@ -50,20 +37,36 @@
       <h2>Competências Técnicas</h2>
       <ul class="skills">
         <li><i class="devicon-csharp-plain colored"></i><span>C#</span></li>
-        <li><i class="devicon-dotnetcore-plain colored"></i><span>.NET</span></li>
-        <li><i class="devicon-mysql-plain colored"></i><span>MySQL</span></li>
-        <li><i class="devicon-aspnet-plain colored"></i><span>ASP.NET</span></li>
-        <li><i class="devicon-postman-plain colored"></i><span>Postman</span></li>
-        <li><i class="devicon-git-plain colored"></i><span>Git</span></li>
+        <li><i class="devicon-dotnetcore-plain colored"></i><span>.NET Framework &amp; Core</span></li>
+        <li><span>DevExpress</span></li>
+        <li><i class="devicon-microsoftsqlserver-plain colored"></i><span>SQL Server</span></li>
+        <li><span>Integrações com APIs (Zapsign e bancos)</span></li>
+        <li><span>SOLID</span></li>
+        <li><i class="devicon-amazonwebservices-original colored"></i><span>AWS</span></li>
+        <li><span>RabbitMQ</span></li>
+        <li><i class="devicon-html5-plain colored"></i><span>HTML</span></li>
+        <li><i class="devicon-bootstrap-plain colored"></i><span>Bootstrap</span></li>
+        <li><span>Blazor (básico)</span></li>
       </ul>
+    </section>
+    <section id="formacao" class="fade-section">
+      <h2>Formação Acadêmica e Certificações</h2>
+      <p>Curso de Análise e Desenvolvimento de Sistemas na Universidade Estácio de Sá (2021–2024).</p>
+      <ul>
+        <li>Programação de Sistemas de Informação</li>
+        <li>Algoritmos Escaláveis</li>
+        <li>Programação para Internet</li>
+        <li>Programação para Dispositivos Móveis</li>
+      </ul>
+      <p>Língua Inglesa Nível Básico (SESC)</p>
     </section>
     <section id="contato" class="fade-section">
       <h2>Contato</h2>
-      <p>Email: <a href="mailto:matthews.muniz33@gmail.com">matthews.muniz33@gmail.com</a></p>
-      <p>Telefone: <a href="tel:+5511999999999">(11) 99999-9999</a></p>
+      <p>Email: <a href="mailto:mmuniz.dev@gmail.com">mmuniz.dev@gmail.com</a></p>
+      <p>Telefone: (92) 99440-0136 / (92) 99201-2708</p>
       <ul class="social">
         <li><a href="https://github.com/MMUNIZ33" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/matheus-muniz/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
+        <li><a href="https://linkedin.com/in/mattheus-muniz" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
       </ul>
     </section>
   </main>
